crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF059_RUF059_1.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF059_1.py:2:5: RUF059 (unused-unpacked-variable) [*] Unpacked variable `x` is never used
  |
1 | def f(tup):
2 |     x, y = tup
  |     ^ RUF059 (unused-unpacked-variable)
  |
  = help: Prefix it with an underscore or any other dummy variable pattern

ℹ Unsafe fix
1 1 | def f(tup):
2   |-    x, y = tup
  2 |+    _x, y = tup
3 3 | 
4 4 | 
5 5 | def f():

RUF059_1.py:2:8: RUF059 (unused-unpacked-variable) [*] Unpacked variable `y` is never used
  |
1 | def f(tup):
2 |     x, y = tup
  |        ^ RUF059 (unused-unpacked-variable)
  |
  = help: Prefix it with an underscore or any other dummy variable pattern

ℹ Unsafe fix
1 1 | def f(tup):
2   |-    x, y = tup
  2 |+    x, _y = tup
3 3 | 
4 4 | 
5 5 | def f():

RUF059_1.py:10:9: RUF059 (unused-unpacked-variable) [*] Unpacked variable `y` is never used
   |
 9 | def f():
10 |     (x, y) = coords = 1, 2
   |         ^ RUF059 (unused-unpacked-variable)
11 |     if x > 1:
12 |         print(coords)
   |
   = help: Prefix it with an underscore or any other dummy variable pattern

ℹ Unsafe fix
7  7  | 
8  8  | 
9  9  | def f():
10    |-    (x, y) = coords = 1, 2
   10 |+    (x, _y) = coords = 1, 2
11 11 |     if x > 1:
12 12 |         print(coords)
13 13 | 

RUF059_1.py:16:6: RUF059 (unused-unpacked-variable) [*] Unpacked variable `x` is never used
   |
15 | def f():
16 |     (x, y) = coords = 1, 2
   |      ^ RUF059 (unused-unpacked-variable)
   |
   = help: Prefix it with an underscore or any other dummy variable pattern

ℹ Unsafe fix
13 13 | 
14 14 | 
15 15 | def f():
16    |-    (x, y) = coords = 1, 2
   16 |+    (_x, y) = coords = 1, 2
17 17 | 
18 18 | 
19 19 | def f():

RUF059_1.py:16:9: RUF059 (unused-unpacked-variable) [*] Unpacked variable `y` is never used
   |
15 | def f():
16 |     (x, y) = coords = 1, 2
   |         ^ RUF059 (unused-unpacked-variable)
   |
   = help: Prefix it with an underscore or any other dummy variable pattern

ℹ Unsafe fix
13 13 | 
14 14 | 
15 15 | def f():
16    |-    (x, y) = coords = 1, 2
   16 |+    (x, _y) = coords = 1, 2
17 17 | 
18 18 | 
19 19 | def f():

RUF059_1.py:20:15: RUF059 (unused-unpacked-variable) [*] Unpacked variable `x` is never used
   |
19 | def f():
20 |     coords = (x, y) = 1, 2
   |               ^ RUF059 (unused-unpacked-variable)
   |
   = help: Prefix it with an underscore or any other dummy variable pattern

ℹ Unsafe fix
17 17 | 
18 18 | 
19 19 | def f():
20    |-    coords = (x, y) = 1, 2
   20 |+    coords = (_x, y) = 1, 2
21 21 | 
22 22 | 
23 23 | def f():

RUF059_1.py:20:18: RUF059 (unused-unpacked-variable) [*] Unpacked variable `y` is never used
   |
19 | def f():
20 |     coords = (x, y) = 1, 2
   |                  ^ RUF059 (unused-unpacked-variable)
   |
   = help: Prefix it with an underscore or any other dummy variable pattern

ℹ Unsafe fix
17 17 | 
18 18 | 
19 19 | def f():
20    |-    coords = (x, y) = 1, 2
   20 |+    coords = (x, _y) = 1, 2
21 21 | 
22 22 | 
23 23 | def f():
