crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF059_RUF059_2.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF059_2.py:8:20: RUF059 (unused-unpacked-variable) [*] Unpacked variable `x2` is never used
  |
6 |         pass
7 |
8 |     with foo() as (x2, y2):
  |                    ^^ RUF059 (unused-unpacked-variable)
9 |         pass
  |
  = help: Prefix it with an underscore or any other dummy variable pattern

ℹ Unsafe fix
5 5 |     with foo() as x1:
6 6 |         pass
7 7 | 
8   |-    with foo() as (x2, y2):
  8 |+    with foo() as (_x2, y2):
9 9 |         pass
10 10 | 
11 11 |     with (foo() as x3, foo() as y3, foo() as z3):

RUF059_2.py:8:24: RUF059 (unused-unpacked-variable) [*] Unpacked variable `y2` is never used
  |
6 |         pass
7 |
8 |     with foo() as (x2, y2):
  |                        ^^ RUF059 (unused-unpacked-variable)
9 |         pass
  |
  = help: Prefix it with an underscore or any other dummy variable pattern

ℹ Unsafe fix
5 5 |     with foo() as x1:
6 6 |         pass
7 7 | 
8   |-    with foo() as (x2, y2):
  8 |+    with foo() as (x2, _y2):
9 9 |         pass
10 10 | 
11 11 |     with (foo() as x3, foo() as y3, foo() as z3):

RUF059_2.py:17:6: RUF059 (unused-unpacked-variable) [*] Unpacked variable `x2` is never used
   |
15 | def f():
16 |     (x1, y1) = (1, 2)
17 |     (x2, y2) = coords2 = (1, 2)
   |      ^^ RUF059 (unused-unpacked-variable)
18 |     coords3 = (x3, y3) = (1, 2)
   |
   = help: Prefix it with an underscore or any other dummy variable pattern

ℹ Unsafe fix
14 14 | 
15 15 | def f():
16 16 |     (x1, y1) = (1, 2)
17    |-    (x2, y2) = coords2 = (1, 2)
   17 |+    (_x2, y2) = coords2 = (1, 2)
18 18 |     coords3 = (x3, y3) = (1, 2)
19 19 | 
20 20 | 

RUF059_2.py:17:10: RUF059 (unused-unpacked-variable) [*] Unpacked variable `y2` is never used
   |
15 | def f():
16 |     (x1, y1) = (1, 2)
17 |     (x2, y2) = coords2 = (1, 2)
   |          ^^ RUF059 (unused-unpacked-variable)
18 |     coords3 = (x3, y3) = (1, 2)
   |
   = help: Prefix it with an underscore or any other dummy variable pattern

ℹ Unsafe fix
14 14 | 
15 15 | def f():
16 16 |     (x1, y1) = (1, 2)
17    |-    (x2, y2) = coords2 = (1, 2)
   17 |+    (x2, _y2) = coords2 = (1, 2)
18 18 |     coords3 = (x3, y3) = (1, 2)
19 19 | 
20 20 | 

RUF059_2.py:18:16: RUF059 (unused-unpacked-variable) [*] Unpacked variable `x3` is never used
   |
16 |     (x1, y1) = (1, 2)
17 |     (x2, y2) = coords2 = (1, 2)
18 |     coords3 = (x3, y3) = (1, 2)
   |                ^^ RUF059 (unused-unpacked-variable)
   |
   = help: Prefix it with an underscore or any other dummy variable pattern

ℹ Unsafe fix
15 15 | def f():
16 16 |     (x1, y1) = (1, 2)
17 17 |     (x2, y2) = coords2 = (1, 2)
18    |-    coords3 = (x3, y3) = (1, 2)
   18 |+    coords3 = (_x3, y3) = (1, 2)
19 19 | 
20 20 | 
21 21 | def f():

RUF059_2.py:18:20: RUF059 (unused-unpacked-variable) [*] Unpacked variable `y3` is never used
   |
16 |     (x1, y1) = (1, 2)
17 |     (x2, y2) = coords2 = (1, 2)
18 |     coords3 = (x3, y3) = (1, 2)
   |                    ^^ RUF059 (unused-unpacked-variable)
   |
   = help: Prefix it with an underscore or any other dummy variable pattern

ℹ Unsafe fix
15 15 | def f():
16 16 |     (x1, y1) = (1, 2)
17 17 |     (x2, y2) = coords2 = (1, 2)
18    |-    coords3 = (x3, y3) = (1, 2)
   18 |+    coords3 = (x3, _y3) = (1, 2)
19 19 | 
20 20 | 
21 21 | def f():

RUF059_2.py:22:24: RUF059 (unused-unpacked-variable) [*] Unpacked variable `x` is never used
   |
21 | def f():
22 |     with Nested(m) as (x, y):
   |                        ^ RUF059 (unused-unpacked-variable)
23 |         pass
   |
   = help: Prefix it with an underscore or any other dummy variable pattern

ℹ Unsafe fix
19 19 | 
20 20 | 
21 21 | def f():
22    |-    with Nested(m) as (x, y):
   22 |+    with Nested(m) as (_x, y):
23 23 |         pass
24 24 | 
25 25 | 

RUF059_2.py:22:27: RUF059 (unused-unpacked-variable) [*] Unpacked variable `y` is never used
   |
21 | def f():
22 |     with Nested(m) as (x, y):
   |                           ^ RUF059 (unused-unpacked-variable)
23 |         pass
   |
   = help: Prefix it with an underscore or any other dummy variable pattern

ℹ Unsafe fix
19 19 | 
20 20 | 
21 21 | def f():
22    |-    with Nested(m) as (x, y):
   22 |+    with Nested(m) as (x, _y):
23 23 |         pass
24 24 | 
25 25 | 

RUF059_2.py:27:17: RUF059 (unused-unpacked-variable) [*] Unpacked variable `a` is never used
   |
26 | def f():
27 |     toplevel = (a, b) = lexer.get_token()
   |                 ^ RUF059 (unused-unpacked-variable)
   |
   = help: Prefix it with an underscore or any other dummy variable pattern

ℹ Unsafe fix
24 24 | 
25 25 | 
26 26 | def f():
27    |-    toplevel = (a, b) = lexer.get_token()
   27 |+    toplevel = (_a, b) = lexer.get_token()
28 28 | 
29 29 | 
30 30 | def f():

RUF059_2.py:27:20: RUF059 (unused-unpacked-variable) [*] Unpacked variable `b` is never used
   |
26 | def f():
27 |     toplevel = (a, b) = lexer.get_token()
   |                    ^ RUF059 (unused-unpacked-variable)
   |
   = help: Prefix it with an underscore or any other dummy variable pattern

ℹ Unsafe fix
24 24 | 
25 25 | 
26 26 | def f():
27    |-    toplevel = (a, b) = lexer.get_token()
   27 |+    toplevel = (a, _b) = lexer.get_token()
28 28 | 
29 29 | 
30 30 | def f():

RUF059_2.py:31:6: RUF059 (unused-unpacked-variable) [*] Unpacked variable `a` is never used
   |
30 | def f():
31 |     (a, b) = toplevel = lexer.get_token()
   |      ^ RUF059 (unused-unpacked-variable)
   |
   = help: Prefix it with an underscore or any other dummy variable pattern

ℹ Unsafe fix
28 28 | 
29 29 | 
30 30 | def f():
31    |-    (a, b) = toplevel = lexer.get_token()
   31 |+    (_a, b) = toplevel = lexer.get_token()

RUF059_2.py:31:9: RUF059 (unused-unpacked-variable) [*] Unpacked variable `b` is never used
   |
30 | def f():
31 |     (a, b) = toplevel = lexer.get_token()
   |         ^ RUF059 (unused-unpacked-variable)
   |
   = help: Prefix it with an underscore or any other dummy variable pattern

ℹ Unsafe fix
28 28 | 
29 29 | 
30 30 | def f():
31    |-    (a, b) = toplevel = lexer.get_token()
   31 |+    (a, _b) = toplevel = lexer.get_token()
