crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF060_RUF060.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF060.py:2:1: RUF060 (in-empty-collection) Unnecessary membership test on empty collection
  |
1 | # Errors
2 | 1 in []
  | ^^^^^^^ RUF060 (in-empty-collection)
3 | 1 not in []
4 | 2 in list()
  |

RUF060.py:3:1: RUF060 (in-empty-collection) Unnecessary membership test on empty collection
  |
1 | # Errors
2 | 1 in []
3 | 1 not in []
  | ^^^^^^^^^^^ RUF060 (in-empty-collection)
4 | 2 in list()
5 | 2 not in list()
  |

RUF060.py:4:1: RUF060 (in-empty-collection) Unnecessary membership test on empty collection
  |
2 | 1 in []
3 | 1 not in []
4 | 2 in list()
  | ^^^^^^^^^^^ RUF060 (in-empty-collection)
5 | 2 not in list()
6 | _ in ()
  |

RUF060.py:5:1: RUF060 (in-empty-collection) Unnecessary membership test on empty collection
  |
3 | 1 not in []
4 | 2 in list()
5 | 2 not in list()
  | ^^^^^^^^^^^^^^^ RUF060 (in-empty-collection)
6 | _ in ()
7 | _ not in ()
  |

RUF060.py:6:1: RUF060 (in-empty-collection) Unnecessary membership test on empty collection
  |
4 | 2 in list()
5 | 2 not in list()
6 | _ in ()
  | ^^^^^^^ RUF060 (in-empty-collection)
7 | _ not in ()
8 | 'x' in tuple()
  |

RUF060.py:7:1: RUF060 (in-empty-collection) Unnecessary membership test on empty collection
  |
5 | 2 not in list()
6 | _ in ()
7 | _ not in ()
  | ^^^^^^^^^^^ RUF060 (in-empty-collection)
8 | 'x' in tuple()
9 | 'y' not in tuple()
  |

RUF060.py:8:1: RUF060 (in-empty-collection) Unnecessary membership test on empty collection
   |
 6 | _ in ()
 7 | _ not in ()
 8 | 'x' in tuple()
   | ^^^^^^^^^^^^^^ RUF060 (in-empty-collection)
 9 | 'y' not in tuple()
10 | 'a' in set()
   |

RUF060.py:9:1: RUF060 (in-empty-collection) Unnecessary membership test on empty collection
   |
 7 | _ not in ()
 8 | 'x' in tuple()
 9 | 'y' not in tuple()
   | ^^^^^^^^^^^^^^^^^^ RUF060 (in-empty-collection)
10 | 'a' in set()
11 | 'a' not in set()
   |

RUF060.py:10:1: RUF060 (in-empty-collection) Unnecessary membership test on empty collection
   |
 8 | 'x' in tuple()
 9 | 'y' not in tuple()
10 | 'a' in set()
   | ^^^^^^^^^^^^ RUF060 (in-empty-collection)
11 | 'a' not in set()
12 | 'b' in {}
   |

RUF060.py:11:1: RUF060 (in-empty-collection) Unnecessary membership test on empty collection
   |
 9 | 'y' not in tuple()
10 | 'a' in set()
11 | 'a' not in set()
   | ^^^^^^^^^^^^^^^^ RUF060 (in-empty-collection)
12 | 'b' in {}
13 | 'b' not in {}
   |

RUF060.py:12:1: RUF060 (in-empty-collection) Unnecessary membership test on empty collection
   |
10 | 'a' in set()
11 | 'a' not in set()
12 | 'b' in {}
   | ^^^^^^^^^ RUF060 (in-empty-collection)
13 | 'b' not in {}
14 | 1 in dict()
   |

RUF060.py:13:1: RUF060 (in-empty-collection) Unnecessary membership test on empty collection
   |
11 | 'a' not in set()
12 | 'b' in {}
13 | 'b' not in {}
   | ^^^^^^^^^^^^^ RUF060 (in-empty-collection)
14 | 1 in dict()
15 | 2 not in dict()
   |

RUF060.py:14:1: RUF060 (in-empty-collection) Unnecessary membership test on empty collection
   |
12 | 'b' in {}
13 | 'b' not in {}
14 | 1 in dict()
   | ^^^^^^^^^^^ RUF060 (in-empty-collection)
15 | 2 not in dict()
16 | "a" in ""
   |

RUF060.py:15:1: RUF060 (in-empty-collection) Unnecessary membership test on empty collection
   |
13 | 'b' not in {}
14 | 1 in dict()
15 | 2 not in dict()
   | ^^^^^^^^^^^^^^^ RUF060 (in-empty-collection)
16 | "a" in ""
17 | b'c' in b""
   |

RUF060.py:16:1: RUF060 (in-empty-collection) Unnecessary membership test on empty collection
   |
14 | 1 in dict()
15 | 2 not in dict()
16 | "a" in ""
   | ^^^^^^^^^ RUF060 (in-empty-collection)
17 | b'c' in b""
18 | "b" in f""
   |

RUF060.py:17:1: RUF060 (in-empty-collection) Unnecessary membership test on empty collection
   |
15 | 2 not in dict()
16 | "a" in ""
17 | b'c' in b""
   | ^^^^^^^^^^^ RUF060 (in-empty-collection)
18 | "b" in f""
19 | b"a" in bytearray()
   |

RUF060.py:18:1: RUF060 (in-empty-collection) Unnecessary membership test on empty collection
   |
16 | "a" in ""
17 | b'c' in b""
18 | "b" in f""
   | ^^^^^^^^^^ RUF060 (in-empty-collection)
19 | b"a" in bytearray()
20 | b"a" in bytes()
   |

RUF060.py:19:1: RUF060 (in-empty-collection) Unnecessary membership test on empty collection
   |
17 | b'c' in b""
18 | "b" in f""
19 | b"a" in bytearray()
   | ^^^^^^^^^^^^^^^^^^^ RUF060 (in-empty-collection)
20 | b"a" in bytes()
21 | 1 in frozenset()
   |

RUF060.py:20:1: RUF060 (in-empty-collection) Unnecessary membership test on empty collection
   |
18 | "b" in f""
19 | b"a" in bytearray()
20 | b"a" in bytes()
   | ^^^^^^^^^^^^^^^ RUF060 (in-empty-collection)
21 | 1 in frozenset()
22 | 1 in set(set())
   |

RUF060.py:21:1: RUF060 (in-empty-collection) Unnecessary membership test on empty collection
   |
19 | b"a" in bytearray()
20 | b"a" in bytes()
21 | 1 in frozenset()
   | ^^^^^^^^^^^^^^^^ RUF060 (in-empty-collection)
22 | 1 in set(set())
23 | 2 in frozenset([])
   |

RUF060.py:22:1: RUF060 (in-empty-collection) Unnecessary membership test on empty collection
   |
20 | b"a" in bytes()
21 | 1 in frozenset()
22 | 1 in set(set())
   | ^^^^^^^^^^^^^^^ RUF060 (in-empty-collection)
23 | 2 in frozenset([])
24 | '' in set("")
   |

RUF060.py:23:1: RUF060 (in-empty-collection) Unnecessary membership test on empty collection
   |
21 | 1 in frozenset()
22 | 1 in set(set())
23 | 2 in frozenset([])
   | ^^^^^^^^^^^^^^^^^^ RUF060 (in-empty-collection)
24 | '' in set("")
   |

RUF060.py:24:1: RUF060 (in-empty-collection) Unnecessary membership test on empty collection
   |
22 | 1 in set(set())
23 | 2 in frozenset([])
24 | '' in set("")
   | ^^^^^^^^^^^^^ RUF060 (in-empty-collection)
25 |
26 | # OK
   |
