crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF061_RUF061_deprecated_call.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF061_deprecated_call.py:16:5: RUF061 (legacy-form-pytest-raises) [*] Use context-manager form of `pytest.deprecated_call()`
   |
15 | def test_error_trivial():
16 |     pytest.deprecated_call(raise_deprecation_warning, "deprecated")
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ RUF061 (legacy-form-pytest-raises)
   |
   = help: Use `pytest.deprecated_call()` as a context-manager

ℹ Unsafe fix
13 13 | 
14 14 | 
15 15 | def test_error_trivial():
16    |-    pytest.deprecated_call(raise_deprecation_warning, "deprecated")
   16 |+    with pytest.deprecated_call():
   17 |+        raise_deprecation_warning("deprecated")
17 18 | 
18 19 | 
19 20 | def test_error_assign():

RUF061_deprecated_call.py:20:9: RUF061 (legacy-form-pytest-raises) [*] Use context-manager form of `pytest.deprecated_call()`
   |
19 | def test_error_assign():
20 |     s = pytest.deprecated_call(raise_deprecation_warning, "deprecated")
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ RUF061 (legacy-form-pytest-raises)
21 |     print(s)
   |
   = help: Use `pytest.deprecated_call()` as a context-manager

ℹ Unsafe fix
17 17 | 
18 18 | 
19 19 | def test_error_assign():
20    |-    s = pytest.deprecated_call(raise_deprecation_warning, "deprecated")
   20 |+    with pytest.deprecated_call():
   21 |+        s = raise_deprecation_warning("deprecated")
21 22 |     print(s)
22 23 | 
23 24 | 

RUF061_deprecated_call.py:25:5: RUF061 (legacy-form-pytest-raises) [*] Use context-manager form of `pytest.deprecated_call()`
   |
24 | def test_error_lambda():
25 |     pytest.deprecated_call(lambda: warnings.warn("", DeprecationWarning))
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ RUF061 (legacy-form-pytest-raises)
   |
   = help: Use `pytest.deprecated_call()` as a context-manager

ℹ Unsafe fix
22 22 | 
23 23 | 
24 24 | def test_error_lambda():
25    |-    pytest.deprecated_call(lambda: warnings.warn("", DeprecationWarning))
   25 |+    with pytest.deprecated_call():
   26 |+        (lambda: warnings.warn("", DeprecationWarning))()
