crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF061_RUF061_warns.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF061_warns.py:16:5: RUF061 (legacy-form-pytest-raises) [*] Use context-manager form of `pytest.warns()`
   |
15 | def test_error_trivial():
16 |     pytest.warns(UserWarning, raise_user_warning, "warning")
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ RUF061 (legacy-form-pytest-raises)
   |
   = help: Use `pytest.warns()` as a context-manager

ℹ Unsafe fix
13 13 | 
14 14 | 
15 15 | def test_error_trivial():
16    |-    pytest.warns(UserWarning, raise_user_warning, "warning")
   16 |+    with pytest.warns(UserWarning):
   17 |+        raise_user_warning("warning")
17 18 | 
18 19 | 
19 20 | def test_error_assign():

RUF061_warns.py:20:9: RUF061 (legacy-form-pytest-raises) [*] Use context-manager form of `pytest.warns()`
   |
19 | def test_error_assign():
20 |     s = pytest.warns(UserWarning, raise_user_warning, "warning")
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ RUF061 (legacy-form-pytest-raises)
21 |     print(s)
   |
   = help: Use `pytest.warns()` as a context-manager

ℹ Unsafe fix
17 17 | 
18 18 | 
19 19 | def test_error_assign():
20    |-    s = pytest.warns(UserWarning, raise_user_warning, "warning")
   20 |+    with pytest.warns(UserWarning):
   21 |+        s = raise_user_warning("warning")
21 22 |     print(s)
22 23 | 
23 24 | 

RUF061_warns.py:25:5: RUF061 (legacy-form-pytest-raises) [*] Use context-manager form of `pytest.warns()`
   |
24 | def test_error_lambda():
25 |     pytest.warns(UserWarning, lambda: warnings.warn("", UserWarning))
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ RUF061 (legacy-form-pytest-raises)
   |
   = help: Use `pytest.warns()` as a context-manager

ℹ Unsafe fix
22 22 | 
23 23 | 
24 24 | def test_error_lambda():
25    |-    pytest.warns(UserWarning, lambda: warnings.warn("", UserWarning))
   25 |+    with pytest.warns(UserWarning):
   26 |+        (lambda: warnings.warn("", UserWarning))()
