crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF064_RUF064.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF064.py:6:17: RUF064 (non-octal-permissions) [*] Non-octal mode
  |
4 | from pathlib import Path
5 |
6 | os.chmod("foo", 444)  # Error
  |                 ^^^ RUF064 (non-octal-permissions)
7 | os.chmod("foo", 0o444)  # OK
8 | os.chmod("foo", 7777)  # Error
  |
  = help: Replace with octal literal

ℹ Unsafe fix
3 3 | import os
4 4 | from pathlib import Path
5 5 | 
6   |-os.chmod("foo", 444)  # Error
  6 |+os.chmod("foo", 0o444)  # Error
7 7 | os.chmod("foo", 0o444)  # OK
8 8 | os.chmod("foo", 7777)  # Error
9 9 | os.chmod("foo", 10000)  # Error

RUF064.py:8:17: RUF064 (non-octal-permissions) Non-octal mode
   |
 6 | os.chmod("foo", 444)  # Error
 7 | os.chmod("foo", 0o444)  # OK
 8 | os.chmod("foo", 7777)  # Error
   |                 ^^^^ RUF064 (non-octal-permissions)
 9 | os.chmod("foo", 10000)  # Error
10 | os.chmod("foo", 99999)  # Error
   |
   = help: Replace with octal literal

RUF064.py:9:17: RUF064 (non-octal-permissions) Non-octal mode
   |
 7 | os.chmod("foo", 0o444)  # OK
 8 | os.chmod("foo", 7777)  # Error
 9 | os.chmod("foo", 10000)  # Error
   |                 ^^^^^ RUF064 (non-octal-permissions)
10 | os.chmod("foo", 99999)  # Error
   |
   = help: Replace with octal literal

RUF064.py:10:17: RUF064 (non-octal-permissions) Non-octal mode
   |
 8 | os.chmod("foo", 7777)  # Error
 9 | os.chmod("foo", 10000)  # Error
10 | os.chmod("foo", 99999)  # Error
   |                 ^^^^^ RUF064 (non-octal-permissions)
11 |
12 | os.umask(777)  # Error
   |
   = help: Replace with octal literal

RUF064.py:12:10: RUF064 (non-octal-permissions) [*] Non-octal mode
   |
10 | os.chmod("foo", 99999)  # Error
11 |
12 | os.umask(777)  # Error
   |          ^^^ RUF064 (non-octal-permissions)
13 | os.umask(0o777)  # OK
   |
   = help: Replace with octal literal

ℹ Unsafe fix
9  9  | os.chmod("foo", 10000)  # Error
10 10 | os.chmod("foo", 99999)  # Error
11 11 | 
12    |-os.umask(777)  # Error
   12 |+os.umask(0o777)  # Error
13 13 | os.umask(0o777)  # OK
14 14 | 
15 15 | os.fchmod(0, 400)  # Error

RUF064.py:15:14: RUF064 (non-octal-permissions) [*] Non-octal mode
   |
13 | os.umask(0o777)  # OK
14 |
15 | os.fchmod(0, 400)  # Error
   |              ^^^ RUF064 (non-octal-permissions)
16 | os.fchmod(0, 0o400)  # OK
   |
   = help: Replace with octal literal

ℹ Unsafe fix
12 12 | os.umask(777)  # Error
13 13 | os.umask(0o777)  # OK
14 14 | 
15    |-os.fchmod(0, 400)  # Error
   15 |+os.fchmod(0, 0o400)  # Error
16 16 | os.fchmod(0, 0o400)  # OK
17 17 | 
18 18 | os.lchmod("foo", 755)  # Error

RUF064.py:18:18: RUF064 (non-octal-permissions) [*] Non-octal mode
   |
16 | os.fchmod(0, 0o400)  # OK
17 |
18 | os.lchmod("foo", 755)  # Error
   |                  ^^^ RUF064 (non-octal-permissions)
19 | os.lchmod("foo", 0o755)  # OK
   |
   = help: Replace with octal literal

ℹ Unsafe fix
15 15 | os.fchmod(0, 400)  # Error
16 16 | os.fchmod(0, 0o400)  # OK
17 17 | 
18    |-os.lchmod("foo", 755)  # Error
   18 |+os.lchmod("foo", 0o755)  # Error
19 19 | os.lchmod("foo", 0o755)  # OK
20 20 | 
21 21 | os.mkdir("foo", 600)  # Error

RUF064.py:21:17: RUF064 (non-octal-permissions) [*] Non-octal mode
   |
19 | os.lchmod("foo", 0o755)  # OK
20 |
21 | os.mkdir("foo", 600)  # Error
   |                 ^^^ RUF064 (non-octal-permissions)
22 | os.mkdir("foo", 0o600)  # OK
   |
   = help: Replace with octal literal

ℹ Unsafe fix
18 18 | os.lchmod("foo", 755)  # Error
19 19 | os.lchmod("foo", 0o755)  # OK
20 20 | 
21    |-os.mkdir("foo", 600)  # Error
   21 |+os.mkdir("foo", 0o600)  # Error
22 22 | os.mkdir("foo", 0o600)  # OK
23 23 | 
24 24 | os.makedirs("foo", 644)  # Error

RUF064.py:24:20: RUF064 (non-octal-permissions) [*] Non-octal mode
   |
22 | os.mkdir("foo", 0o600)  # OK
23 |
24 | os.makedirs("foo", 644)  # Error
   |                    ^^^ RUF064 (non-octal-permissions)
25 | os.makedirs("foo", 0o644)  # OK
   |
   = help: Replace with octal literal

ℹ Unsafe fix
21 21 | os.mkdir("foo", 600)  # Error
22 22 | os.mkdir("foo", 0o600)  # OK
23 23 | 
24    |-os.makedirs("foo", 644)  # Error
   24 |+os.makedirs("foo", 0o644)  # Error
25 25 | os.makedirs("foo", 0o644)  # OK
26 26 | 
27 27 | os.mkfifo("foo", 640)  # Error

RUF064.py:27:18: RUF064 (non-octal-permissions) [*] Non-octal mode
   |
25 | os.makedirs("foo", 0o644)  # OK
26 |
27 | os.mkfifo("foo", 640)  # Error
   |                  ^^^ RUF064 (non-octal-permissions)
28 | os.mkfifo("foo", 0o640)  # OK
   |
   = help: Replace with octal literal

ℹ Unsafe fix
24 24 | os.makedirs("foo", 644)  # Error
25 25 | os.makedirs("foo", 0o644)  # OK
26 26 | 
27    |-os.mkfifo("foo", 640)  # Error
   27 |+os.mkfifo("foo", 0o640)  # Error
28 28 | os.mkfifo("foo", 0o640)  # OK
29 29 | 
30 30 | os.mknod("foo", 660)  # Error

RUF064.py:30:17: RUF064 (non-octal-permissions) [*] Non-octal mode
   |
28 | os.mkfifo("foo", 0o640)  # OK
29 |
30 | os.mknod("foo", 660)  # Error
   |                 ^^^ RUF064 (non-octal-permissions)
31 | os.mknod("foo", 0o660)  # OK
   |
   = help: Replace with octal literal

ℹ Unsafe fix
27 27 | os.mkfifo("foo", 640)  # Error
28 28 | os.mkfifo("foo", 0o640)  # OK
29 29 | 
30    |-os.mknod("foo", 660)  # Error
   30 |+os.mknod("foo", 0o660)  # Error
31 31 | os.mknod("foo", 0o660)  # OK
32 32 | 
33 33 | os.open("foo", os.O_CREAT, 644)  # Error

RUF064.py:33:28: RUF064 (non-octal-permissions) [*] Non-octal mode
   |
31 | os.mknod("foo", 0o660)  # OK
32 |
33 | os.open("foo", os.O_CREAT, 644)  # Error
   |                            ^^^ RUF064 (non-octal-permissions)
34 | os.open("foo", os.O_CREAT, 0o644)  # OK
   |
   = help: Replace with octal literal

ℹ Unsafe fix
30 30 | os.mknod("foo", 660)  # Error
31 31 | os.mknod("foo", 0o660)  # OK
32 32 | 
33    |-os.open("foo", os.O_CREAT, 644)  # Error
   33 |+os.open("foo", os.O_CREAT, 0o644)  # Error
34 34 | os.open("foo", os.O_CREAT, 0o644)  # OK
35 35 | 
36 36 | Path("bar").chmod(755)  # Error

RUF064.py:36:19: RUF064 (non-octal-permissions) [*] Non-octal mode
   |
34 | os.open("foo", os.O_CREAT, 0o644)  # OK
35 |
36 | Path("bar").chmod(755)  # Error
   |                   ^^^ RUF064 (non-octal-permissions)
37 | Path("bar").chmod(0o755)  # OK
   |
   = help: Replace with octal literal

ℹ Unsafe fix
33 33 | os.open("foo", os.O_CREAT, 644)  # Error
34 34 | os.open("foo", os.O_CREAT, 0o644)  # OK
35 35 | 
36    |-Path("bar").chmod(755)  # Error
   36 |+Path("bar").chmod(0o755)  # Error
37 37 | Path("bar").chmod(0o755)  # OK
38 38 | 
39 39 | path = Path("bar")

RUF064.py:40:12: RUF064 (non-octal-permissions) [*] Non-octal mode
   |
39 | path = Path("bar")
40 | path.chmod(755)  # Error
   |            ^^^ RUF064 (non-octal-permissions)
41 | path.chmod(0o755)  # OK
   |
   = help: Replace with octal literal

ℹ Unsafe fix
37 37 | Path("bar").chmod(0o755)  # OK
38 38 | 
39 39 | path = Path("bar")
40    |-path.chmod(755)  # Error
   40 |+path.chmod(0o755)  # Error
41 41 | path.chmod(0o755)  # OK
42 42 | 
43 43 | dbm.open("db", "r", 600)  # Error

RUF064.py:43:21: RUF064 (non-octal-permissions) [*] Non-octal mode
   |
41 | path.chmod(0o755)  # OK
42 |
43 | dbm.open("db", "r", 600)  # Error
   |                     ^^^ RUF064 (non-octal-permissions)
44 | dbm.open("db", "r", 0o600)  # OK
   |
   = help: Replace with octal literal

ℹ Unsafe fix
40 40 | path.chmod(755)  # Error
41 41 | path.chmod(0o755)  # OK
42 42 | 
43    |-dbm.open("db", "r", 600)  # Error
   43 |+dbm.open("db", "r", 0o600)  # Error
44 44 | dbm.open("db", "r", 0o600)  # OK
45 45 | 
46 46 | dbm.gnu.open("db", "r", 600)  # Error

RUF064.py:46:25: RUF064 (non-octal-permissions) [*] Non-octal mode
   |
44 | dbm.open("db", "r", 0o600)  # OK
45 |
46 | dbm.gnu.open("db", "r", 600)  # Error
   |                         ^^^ RUF064 (non-octal-permissions)
47 | dbm.gnu.open("db", "r", 0o600)  # OK
   |
   = help: Replace with octal literal

ℹ Unsafe fix
43 43 | dbm.open("db", "r", 600)  # Error
44 44 | dbm.open("db", "r", 0o600)  # OK
45 45 | 
46    |-dbm.gnu.open("db", "r", 600)  # Error
   46 |+dbm.gnu.open("db", "r", 0o600)  # Error
47 47 | dbm.gnu.open("db", "r", 0o600)  # OK
48 48 | 
49 49 | dbm.ndbm.open("db", "r", 600)  # Error

RUF064.py:49:26: RUF064 (non-octal-permissions) [*] Non-octal mode
   |
47 | dbm.gnu.open("db", "r", 0o600)  # OK
48 |
49 | dbm.ndbm.open("db", "r", 600)  # Error
   |                          ^^^ RUF064 (non-octal-permissions)
50 | dbm.ndbm.open("db", "r", 0o600)  # OK
   |
   = help: Replace with octal literal

ℹ Unsafe fix
46 46 | dbm.gnu.open("db", "r", 600)  # Error
47 47 | dbm.gnu.open("db", "r", 0o600)  # OK
48 48 | 
49    |-dbm.ndbm.open("db", "r", 600)  # Error
   49 |+dbm.ndbm.open("db", "r", 0o600)  # Error
50 50 | dbm.ndbm.open("db", "r", 0o600)  # OK
51 51 | 
52 52 | os.fchmod(0, 256)  # 0o400

RUF064.py:52:14: RUF064 (non-octal-permissions) [*] Non-octal mode
   |
50 | dbm.ndbm.open("db", "r", 0o600)  # OK
51 |
52 | os.fchmod(0, 256)  # 0o400
   |              ^^^ RUF064 (non-octal-permissions)
53 | os.fchmod(0, 493)  # 0o755
   |
   = help: Replace with octal literal

ℹ Unsafe fix
49 49 | dbm.ndbm.open("db", "r", 600)  # Error
50 50 | dbm.ndbm.open("db", "r", 0o600)  # OK
51 51 | 
52    |-os.fchmod(0, 256)  # 0o400
   52 |+os.fchmod(0, 0o400)  # 0o400
53 53 | os.fchmod(0, 493)  # 0o755

RUF064.py:53:14: RUF064 (non-octal-permissions) [*] Non-octal mode
   |
52 | os.fchmod(0, 256)  # 0o400
53 | os.fchmod(0, 493)  # 0o755
   |              ^^^ RUF064 (non-octal-permissions)
   |
   = help: Replace with octal literal

ℹ Unsafe fix
50 50 | dbm.ndbm.open("db", "r", 0o600)  # OK
51 51 | 
52 52 | os.fchmod(0, 256)  # 0o400
53    |-os.fchmod(0, 493)  # 0o755
   53 |+os.fchmod(0, 0o755)  # 0o755
